--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./main.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="intro"></div>
+		<div class="header-wrapper">
+			<!-- block -->
+			<header class="header container">
+				<img
+					class="header__logo"
+					width="60"
+					height="68"
+					src="./images/logo.png"
+					alt="NT logo"
+				/>
+				<div class="header__btns">
+					<img
+						class="header__search"
+						src="./images/search-icon.svg"
+						alt="search-icon"
+					/>
+					<button class="header__btn btn">Menu</button>
+				</div>
+			</header>
+
+			<section class="hero container">
+				<h1 class="hero__title">Night Trips</h1>
+				<h4 class="hero__subtitle">
+					WE GOT TRIPS FOR THE TRIPPSTER IN YOU
+				</h4>
+				<p class="hero__text">
+					Neque, eros commodo, nascetur ullamcorper vitae. Tincidunt
+					ut venenatis, volutpat lorem ut faucibus mauris, quisque.
+					Integer gravida sed quis congue. Vel risus, arcu a viverra
+					leo id pulvinar ultricies. Enim in in in pulvinar nulla
+					sollicitudin. Ullamcorper.
+				</p>
+
+				<div class="hero__bottom"></div>
+			</section>
+		</div>
+		<section class="option">
+			<div class="container">
+				<div class="card">
+					<h4 class="card__title">Capsule</h4>
+					<p class="card__text">
+						Compatible with Nespresso systems and similar brewers
+					</p>
+				</div>
+
+				<div class="card card--main">
+					<h4 class="card__title card__title--main">Capsule</h4>
+					<p class="card__text card__text--main">
+						Compatible with Nespresso systems and similar brewers
+					</p>
+					<div class="card__body">
+						<p class="card__body__description"></p>
+					</div>
+				</div>
+
+				<div class="card">
+					<h4 class="card__title">Capsule</h4>
+					<p class="card__text">
+						Compatible with Nespresso systems and similar brewers
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<nav class="nav">
+			<ul class="nav__list">
+				<li class="nav__item">
+					
+				</li>
+			</ul>
+		</nav>
+		<!--   -->
 	</body>
 </html>
