--- a/about.html
+++ b/about.html
@@ -3,26 +3,26 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<link rel="stylesheet" href="./main.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<a href="./subscribe.html">About us</a>
-		<div class="container">
-			<header></header>
-			<main>
-				<section class="hero hero--about">
-					<h2 class="hero__title">About us</h2>
-					<p class="hero__text">
-						Coffeeroasters began its journey of exotic discovery in
-						1999, highlighting stories of coffee from around the
-						world. We have since been dedicated to bring the perfect
-						cup - from bean to brew - in every shipment.
-					</p>
-				</section>
-			</main>
-			<footer></footer>
+		<div class="box">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim saepe
+			mollitia itaque explicabo praesentium officiis cupiditate voluptatem
+			neque repudiandae obcaecati architecto tenetur delectus rem numquam
+			atque dolor quae, voluptates quidem temporibus, sequi aliquam omnis.
+			Ullam ducimus quam magnam. Tempora, vero totam cupiditate qui earum
+			beatae consequuntur, rem itaque esse enim natus excepturi molestias.
+			Consequuntur quis, repellendus, voluptate facilis quisquam possimus
+			numquam rem recusandae ipsum sint explicabo temporibus doloribus
+			quam soluta autem ipsa est dicta, at animi ut nesciunt fuga
+			exercitationem eaque? Voluptatibus, ex dignissimos eaque
+			perspiciatis ducimus impedit nesciunt consequuntur illum, pariatur
+			incidunt, et facilis eveniet quo dolore reiciendis itaque.
 		</div>
 	</body>
 </html>
