--- a/index.html
+++ b/index.html
@@ -50,10 +50,74 @@
 						<div class="btn header__btn">Button</div>
 					</label>
 				</nav>
+				<div class="hamburger">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</header>
 
 			<main>
-				<section class="hero container">
+				<section class="collection">
+					<div class="collection__card">
+						<img
+							class="collection__img"
+							src="./images/bag.png"
+							alt="bag"
+						/>
+						<div class="collection__content">
+							<h4 class="collection__title">Gran Espresso</h4>
+							<p class="collection__text">
+								Light and flavorful blend with cocoa and black
+								pepper for an intense experience
+							</p>
+						</div>
+					</div>
+					<div class="collection__card">
+						<img
+							class="collection__img"
+							src="./images/bag.png"
+							alt="bag"
+						/>
+						<div class="collection__content">
+							<h4 class="collection__title">Gran Espresso</h4>
+							<p class="collection__text">
+								Light and flavorful blend with cocoa and black
+								pepper for an intense experience
+							</p>
+						</div>
+					</div>
+					<div class="collection__card">
+						<img
+							class="collection__img"
+							src="./images/bag.png"
+							alt="bag"
+						/>
+						<div class="collection__content">
+							<h4 class="collection__title">Gran Espresso</h4>
+							<p class="collection__text">
+								Light and flavorful blend with cocoa and black
+								pepper for an intense experience
+							</p>
+						</div>
+					</div>
+					<div class="collection__card">
+						<img
+							class="collection__img"
+							src="./images/bag.png"
+							alt="bag"
+						/>
+						<div class="collection__content">
+							<h4 class="collection__title">Gran Espresso</h4>
+							<p class="collection__text">
+								Light and flavorful blend with cocoa and black
+								pepper for an intense experience
+							</p>
+						</div>
+					</div>
+				</section>
+
+				<!-- <section class="hero container">
 					<h1 class="hero__title">Night Trips</h1>
 					<h4 class="hero__subtitle">
 						WE GOT TRIPS FOR THE TRIPPSTER IN YOU
@@ -67,9 +131,9 @@
 					</p>
 
 					<div class="hero__bottom"></div>
-				</section>
+				</section> -->
 
-				<section class="choose">
+				<!-- <section class="choose">
 					<h3 class="choose__title">Why choose us?</h3>
 					<p class="choose__subtitle">
 						A large part of our role is choosing which particular
@@ -116,7 +180,7 @@
 							</p>
 						</div>
 					</div>
-				</section>
+				</section> -->
 			</main>
 		</div>
 	</body>
