--- a/about.html
+++ b/about.html
@@ -6,23 +6,39 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="./main.css" />
+		<link rel="stylesheet" href="./css/about.min.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<div class="box">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim saepe
-			mollitia itaque explicabo praesentium officiis cupiditate voluptatem
-			neque repudiandae obcaecati architecto tenetur delectus rem numquam
-			atque dolor quae, voluptates quidem temporibus, sequi aliquam omnis.
-			Ullam ducimus quam magnam. Tempora, vero totam cupiditate qui earum
-			beatae consequuntur, rem itaque esse enim natus excepturi molestias.
-			Consequuntur quis, repellendus, voluptate facilis quisquam possimus
-			numquam rem recusandae ipsum sint explicabo temporibus doloribus
-			quam soluta autem ipsa est dicta, at animi ut nesciunt fuga
-			exercitationem eaque? Voluptatibus, ex dignissimos eaque
-			perspiciatis ducimus impedit nesciunt consequuntur illum, pariatur
-			incidunt, et facilis eveniet quo dolore reiciendis itaque.
+			<div class="col1 col">1</div>
+			<div class="col2 col">2</div>
+			<div class="col3 col">3</div>
+			<div class="col4 col">4</div>
+			<div class="col5 col">5</div>
+			<div class="col6 col">6</div>
+			<div class="col7 col">7</div>
+			<div class="col8 col">8</div>
+			<div class="col9 col">9</div>
+			<div class="col10 col">10</div>
+			<div class="col11 col">11</div>
+			<div class="col12 col">12</div>
+			<div class="col13 col">13</div>
+			<div class="col14 col">14</div>
+			<div class="col15 col">15</div>
+			<div class="col16 col">16</div>
+			<div class="col17 col">17</div>
+			<div class="col18 col">18</div>
+			<div class="col19 col">19</div>
+			<div class="col20 col">20</div>
+			<div class="col21 col">21</div>
+			<div class="col22 col">22</div>
+			<div class="col23 col">23</div>
+			<div class="col24 col">24</div>
+			<div class="col25 col">25</div>
+			<div class="col26 col">26</div>
+			<div class="col27 col">27</div>
+			<div class="col28 col">28</div>
 		</div>
 	</body>
 </html>
