--- a/about.html
+++ b/about.html
@@ -6,10 +6,22 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous"
+		/>
+
 		<link rel="stylesheet" href="./css/about.min.css" />
 		<title>Document</title>
 	</head>
 	<body>
+		<div class="row my-5">
+			<div class="card col-3 col-sm-12 col">lorem</div>
+
+			<div class="card col-6">lorem</div>
+		</div>
 		<div class="box">
 			<div class="col1 col">1</div>
 			<div class="col2 col">2</div>
